--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "livekit-server-sdk": "^2.6.0",
     "next": "14.2.5",
     "next-seo": "^6.0.0",
+    "pocketbase": "^0.21.4",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "tinykeys": "^2.1.0"
